--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
   background-size: auto 100vh;
   font-family: Arial;
   height: 100vh;
+  font-family: 'Roboto', sans-serif;
   font-size: 12px;
 }
 
@@ -82,10 +83,12 @@ a:hover {
 
 .site-title {
   font-size: 4em;
+  font-family: 'PT Serif', serif;
 }
   
 .site-subtitle {
   font-style: italic;
+  font-family: 'Comic Neue', cursive;
 }
 
 .img-portfolio {
