--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,47 @@ a:hover {
   font-family: 'Comic Neue', cursive;
 }
 
+.portfolio {
+  padding: 2em;
+  height: 100vh;
+}
+
+.portfolio h2 {
+  color: whitesmoke;
+  margin-bottom: 1.5em;
+  font-size: 2em;
+}
+
+.portfolio .grid {
+  display: grid;
+  gap: 2em; /* espaçamento entre cada linha do grid */
+}
+
+@media(min-width: 560px){
+  .portfolio .grid {
+    grid-template-columns: 240px 240px; /* definir qntd de colunas */
+    align-content: center;
+    justify-content: center;
+  }
+}
+
+@media(min-width: 880px){
+  .portfolio .grid {
+    grid-template-columns: repeat(3, 260px); /* definir qntd de colunas */
+    align-content: center;
+    justify-content: center;
+    height: calc(100vh - 8em - 48px);
+  }
+}
+
+.portfolio figure { /* somente na figura */
+  text-align: center;
+}
+
 .img-portfolio {
   height: 180px;
-  width: 180px;
+  width: 240px;
+  object-fit: cover; /* ajustar img para melhor enquadramento */
+  border-radius: 20px;
 }
+
