--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,15 @@ header {
 }
 
 .menu a {
-  color: #22c1c3;
+  color: teal;
   display: block;
   padding: 10px 20px;
+  transition: background-color, color, 0.5s;
+}
+
+.menu a:hover{
+  background-color: teal;
+  color: white;
 }
   
 a {
@@ -91,11 +97,13 @@ a:hover {
   font-family: 'Comic Neue', cursive;
 }
 
+.contato,
 .portfolio {
   padding: 2em;
-  height: 100vh;
+  min-height: 100vh;
 }
 
+.contato h2,
 .portfolio h2 {
   color: whitesmoke;
   margin-bottom: 1.5em;
@@ -132,6 +140,26 @@ a:hover {
   height: 180px;
   width: 240px;
   object-fit: cover; /* ajustar img para melhor enquadramento */
-  border-radius: 20px;
+  border-radius: 20px; 
+  transition: transform 500ms;
 }
 
+.img-portfolio:hover {
+  transform: scale(1.3);
+}
+
+.contato .icons{
+  text-align: center;
+}
+
+.contato a {
+  color: whitesmoke;
+  font-size: 8em;
+  transition: text-shadow 1s;
+}
+
+.contato a:active,
+.contato a:hover {
+  text-decoration: none;
+  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5)
+}
