--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ header {
   position: fixed;
   width: 100vw;
   top: 0;
+  z-index: 1;
 }
   
 .menu ul {
@@ -67,6 +68,7 @@ header {
   transition: background-color, color, 0.5s;
 }
 
+.manu a:active,
 .menu a:hover{
   background-color: teal;
   color: white;
@@ -97,17 +99,44 @@ a:hover {
   font-family: 'Comic Neue', cursive;
 }
 
+.sobre,
 .contato,
 .portfolio {
   padding: 2em;
-  min-height: 100vh;
+  min-height: 100vh; 
 }
 
+@media (min-width: 1200px){
+  .contaisner{
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 1200px;
+  }
+}
+
+.sobre h2,
 .contato h2,
 .portfolio h2 {
   color: whitesmoke;
   margin-bottom: 1.5em;
   font-size: 2em;
+}
+
+.sobre p {
+  color: white;
+  margin-bottom: 1.4em;
+  text-indent: 1.4em;
+  text-align: justify;
+}
+
+.sobre .avatar {
+  float: right;
+  margin-left: 2em;
+}
+
+.sobre .avatar img{
+  border-radius: 50%;
+  
 }
 
 .portfolio .grid {
@@ -145,7 +174,7 @@ a:hover {
 }
 
 .img-portfolio:hover {
-  transform: scale(1.3);
+  transform: scale(1.1 );
 }
 
 .contato .icons{
@@ -154,7 +183,7 @@ a:hover {
 
 .contato a {
   color: whitesmoke;
-  font-size: 8em;
+  font-size: 4em;
   transition: text-shadow 1s;
 }
 
