adaptação fonts para mobile

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,6 @@ header {
   top: 0;
   z-index: 1;
   font-size: 16px;
-
 }
   
 .menu ul {
@@ -62,7 +61,7 @@ header {
 .menu a {  
   color: rgb(175, 158, 230);
   display: block;
-  padding: 12px 20px;
+  padding: 12px 16px;
   transition: color .6s;
   text-decoration: none;
   font-weight: 700;
@@ -88,7 +87,7 @@ a:hover {
 }
 
 .site-title {
-  font-size: 1.9em;
+  font-size: 2.5em;
   font-family: 'PT Serif', serif;
 }
 
@@ -101,11 +100,13 @@ a:hover {
   background-color: rgb(113, 89, 193);
 }
 
-.sobre,
-
 .portfolio {
   padding: 2em;
   min-height: 100vh; 
+}
+
+.sobre{
+  padding: 2em;
 }
 
 @media (min-width: 1200px){
@@ -136,8 +137,10 @@ a:hover {
   margin-bottom: 1.4em;
   text-indent: 1.4em;
   text-align: justify;
-  font-size: 18px;
-  font-family: Roboto, sans-serif;
+  font-weight: 400;
+  line-height: 1.7;
+  font-family: Roboto, Arial, Helvetica, sans-serif;
+  letter-spacing: -0.47px;
 }
 
 .sobre .avatar {
